# Thermal-conductivity

./: README.md  cell.hpp  colour.hpp  draw.h  main.cpp  mesh_1d.h  restoreF.cpp  solver.cpp
1d/: average.cpp  cell.cpp  cell.h  colour.cpp  draw.cpp  draw.h  grid.cpp  main.cpp  mesh_1d.cpp  mesh_1d.h  solver.cpp  solver.h
2d/: CMakeLists.txt  Colour_master.cpp  Colour_master.hpp  Solver2d.cpp  Solver2d.h  Solver2d.hpp  cell2d.cpp  cell2d.h  cont.cpp  cont.h  main.cpp  menu.hpp  mesh2d.cpp  mesh2d.h  painter.cpp  painter.h
2d (float)/: .gitignore  CMakeLists.txt
2d (float)/src/: Colour_master.cpp  Colour_master.h  Solver2d.cpp  Solver2d.h  cell2d.cpp  cell2d.h  cont.cpp  cont.h  mesh2d.cpp  mesh2d.h  painter.cpp  painter.h
2d (int)/: CMakeLists.txt
2d (int)/src/: cont.h  menu.cpp  menu.h  mesh2d.h
2d/font/: arial.ttfZone.Identifier
2d/src/: Colour_master.cpp  Colour_master.h  cell2d.h  main.cpp  mesh2d.cpp  painter.cpp  painter.h
